# bevy_enum_event

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: all_patterns_integration.rs  check_override.rs  derive_enum_events.rs  derive_enum_messages.rs  integration_tests.rs  variant_propagate.rs
