[package]
name = "bevy_enum_event"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macros for Bevy event and message types - generates Event, Message, and EntityEvent types from enum variants with support for triggers, observers, buffered messaging, and entity propagation"
repository = "https://github.com/ffmulks/bevy_enum_event"
authors = ["Dr. Florian Mulks <dr@mulks.ac>"]
keywords = ["bevy", "enum", "events", "messages", "macro"]
categories = ["game-development"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["deref"]
deref = []

[dependencies]
syn = { version = "2.0.107", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bevy = { version = "0.18", default-features = false }
